# haskell-sample-binary-abook

./: LICENSE  abook.cabal
src/: Book.hs  BookBinary.hs  BookBinaryStrict.hs  BookCereal.hs  BookForeign.hs  Main.hs
